# majnet

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: app-build.yaml  ci.yaml  images.yaml
bootstrap/: bootstrap.sh  install.sh  majnet-export  majnet-update
bootstrap/lib/: common.sh
bootstrap/steps/: 20-wireguard.sh  30-docker.sh  40-firewall.sh  50-agents.sh  60-backups.sh
crates/bot/: Cargo.toml  README.md
crates/bot/migrations/: V2__config.sql  V3__release_drafts.sql  V4__release_progress.sql
crates/bot/src/: acme.rs  authz.rs  cloudflare.rs  cloudflared.rs  config.rs  control_plane.rs  dashboard_api.rs  deploys.rs  digest.rs  ephemeral.rs  git.rs  github.rs  main.rs  migrate.rs  notify.rs  org_sync.rs  platform_api.rs  promote.rs  proxy.rs  registry.rs  releases.rs  render.rs  service_releases.rs  services.rs  state.rs  tailscale.rs  template_sync.rs  webhooks.rs
crates/common/src/: authz.rs  lib.rs  manifest.rs  merge.rs  platform.rs  project.rs  release.rs
crates/reconciler/: Cargo.toml
crates/reconciler/migrations/: V10__deploy_progress.sql  V2__config.sql  V6__terminal_sessions.sql  V7__metrics_history.sql  V8__container_metrics.sql
crates/reconciler/src/: alerts.rs  authz.rs  config.rs  converge.rs  db.rs  deploy.rs  docker.rs  gc.rs  info.rs  ingress.rs  main.rs  metrics.rs  migrate.rs  obs.rs  platform.rs  purge.rs  rename.rs  secrets.rs  snapshot.rs  state.rs  state_api.rs  terminal.rs
crates/setup/: Cargo.toml  README.md
crates/setup/src/: config.rs  enroll.rs  github_app.rs  main.rs  seed.rs  state.rs  wizard.rs
dashboard/: Dockerfile  index.html  nginx.conf
dashboard/web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/web/src/: api.ts  appDetail.tsx  controlPlane.tsx  deploys.tsx  env.ts  fleet.tsx  forms.tsx  index.css  manifestForm.tsx  observability.tsx  overview.tsx  router.tsx  settings.tsx  shell.tsx  terminal.tsx  topbar.tsx  ui.tsx  views.tsx  vite-env.d.ts
dashboard/web/src/components/: majnet-mark.tsx
dashboard/web/src/components/ui/: sheet.tsx
deploy/: compose.yaml
docs/: design.md  roadmap.md
docs/adr/: 0001-digest-notification-via-package-webhook.md  0004-setup-service-auto-provisioning.md  0008-ci-built-control-plane-images.md  0009-dev-to-ops-delivery.md  0010-app-migration-from-external-paas.md  0012-node-registry-auth-for-private-images.md  0013-auto-assigned-vpn-ingress-hosts-with-ssl.md  0016-in-dashboard-node-terminal.md  0017-metrics-history-persistence.md  0018-monorepo-apps.md  0020-per-app-monorepo-releases.md  0021-service-apps.md  0022-observable-release-progress.md  0023-otel-native-observability.md  0024-inline-encrypted-secrets.md  0025-move-app-between-projects.md  0026-public-non-prod-ingress.md  0028-env-pins-carry-only-the-digest.md
docs/runbooks/: app-migration.md  secret-rotation.md
platform-seed/platform/databases/: compose.yaml
scripts/: smoke-test.sh
templates/repo-templates/: README.md
templates/repo-templates/rust-service/.github/workflows/: build.yaml
templates/repo-templates/web-app/.github/workflows/: build.yaml
website/: astro.config.mjs  package-lock.json
website/src/content/docs/: architecture.md  environment-classes.md  github-model.md  index.mdx  overview.md
