[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/bot",
    "crates/reconciler",
    "crates/setup",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ondrej Maxa"]
repository = "https://github.com/maxa-ondrej/majnet"

[workspace.dependencies]
# async runtime + web
tokio = { version = "1", features = ["full"] }
axum = "0.8"

# GitHub / git
octocrab = "0.44"
gix = "0.70"

# Docker
bollard = { version = "0.21", features = ["ssl"] }
futures-util = "0.3"

# http client (tarball downloads, reconciler notify)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# crypto (webhook signatures, App JWT key loading)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
jsonwebtoken = "9"
secrecy = "0.10"

# serialization / config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# storage
rusqlite = { version = "0.34", features = ["bundled"] }

# snapshot tarballs
tar = "0.4"
flate2 = "1"

# misc
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
