[package]
name = "majnet-reconciler"
description = "Reconciler — the single orchestrator: converges rendered env branches onto node Docker APIs over WireGuard, blue-green, SOPS→tmpfs, GC"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
majnet-common = { path = "../common" }
tokio.workspace = true
axum.workspace = true
bollard.workspace = true
futures-util.workspace = true
reqwest.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
refinery.workspace = true
tar.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
